Rename ambiguously named method, fix braces on old code, fix read/write file to use modern methods